--- a/GameStore/GameStore.Frontend/Components/App.razor
+++ b/GameStore/GameStore.Frontend/Components/App.razor
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="@Assets["GameStore.Frontend.styles.css"]" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 
     <ImportMap />
     <HeadOutlet />
