--- a/GameStore/GameStore.Frontend/Components/Pages/Home.razor
+++ b/GameStore/GameStore.Frontend/Components/Pages/Home.razor
@@ -28,7 +28,15 @@
                 <td class="text-end">@game.Price.ToString("C2")</td>
                 <td>@game.ReleaseDate.ToString("d")</td>
                 <td>
-                    <button class="btn btn-primary">Details</button>
+                    <div class="d-flex">
+                        <a class="btn btn-primary" href="/editgame/@game.Id" role="button">
+                            <i class="bi bi-pencil"></i>
+                        </a>
+                        <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="@GetDeleteModalId(game)">
+                            <i class="bi bi-trash"></i>
+                        </button>
+                    </div>
+                    <DeleteGame Game="@game" />
                 </td>
             </tr>
         }
@@ -42,5 +50,10 @@
     protected override void OnInitialized()
     {
         _games = GamesClient.GetGames();
+    }
+
+    private string GetDeleteModalId(GameSummary game)
+    {
+        return $"#{DeleteGame.GetModalId(game)}";
     }
 }
